    Previously, in this scenario the user object in the response was empty, which could
    impact integrations that rely on the detail_on_success policy, such as LinOTP IdP.
    Now, the user information is correctly included in the response.
  * Apply policy `setrealm` in ValidateController when the user is known

 -- LinOTP Packaging <packaging@linotp.de>  Wed, 09 Apr 2025 11:00:00 +0100
 
linotp (3.4.3-1) buster; urgency=medium

  Fix:
  * timestamp rounding error in challenge signature verifcation when running LinOTP against MySQL 8 database

 -- LinOTP Packaging <packaging@linotp.de>  Wed, 05 Mar 2025 17:40:00 +0100

linotp (3.4.2-1) buster; urgency=low

  Fix:
  * include json-translations in debian package and container

 -- LinOTP Packaging <packaging@linotp.de>  Wed, 05 Mar 2025 08:00:00 +0200

linotp (3.4.1-1) buster; urgency=low

  Fixes:
  * actually set Token PIN in `userservice/enroll`

 -- LinOTP Packaging <packaging@linotp.de>  Wed, 27 Nov 2024 08:59:30 +0100


linotp (3.4.0-1) buster; urgency=low
  
  Breaking Changes:
  * For the container, the `client=` HTTP POST parameter is deprecated and disabled by default.
    It will be removed in an upcoming version of LinOTP. It can be re-enabled
    if the `GET_CLIENT_ADDRESS_FROM_POST_DATA` config is set to a true value
    (the default is "false", for security reasons). Only if re-enabled, the
    "Authorization:" config on the "System config" dialog in the web-based
    management UI is available again and `client=` parameters are looked at.
  * default of `BACKUP_DIR` is now /var/backups/linotp for the Debian package
  * the CLI `linotp backup create` uses `BACKUP_DIR` to save backups instead of the current working directory
  * breaking changes to the `linotp audit cleanup` CLI:
    * option `--no-export` is removed
    * option `--export` is added to trigger the export
    * export is disabled by default. Use `linotp audit cleanup --export` to trigger it. This restores LinOTP 2.x behavior